--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@emotion/react": "^11.10.8",
         "@emotion/styled": "^11.10.8",
         "@mui/icons-material": "^5.11.16",
+        "@mui/lab": "^5.0.0-alpha.128",
         "@mui/material": "^5.12.2",
         "@mui/styled-engine-sc": "^5.12.0",
         "@testing-library/jest-dom": "^5.16.5",
@@ -16,6 +17,7 @@
         "konva": "^9.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-firebase-hooks": "^5.1.1",
         "react-konva": "^18.2.7",
         "react-router-dom": "^6.10.0",
         "react-scripts": "5.0.1",
